# hello-py

./: Agent Test Harness Failure Analysis.docx  logger.py  main.py  pyproject.toml  requirements.txt  task.py  test_task.py
logs/: 2025-11-01-21-48-41.logs  2025-11-10-11-09-56.logs  2025-11-10-11-14-48.logs  2025-11-10-11-26-35.logs  2025-11-10-22-10-46.logs
pytorch_pipeline_code_with_accuracy/: pipeline_run_15_acc_0.852.py  pipeline_run_28_acc_0.852.py
